# microsoft-agents-starterkit

./: .dockerignore  .env.template  .gitignore  Dockerfile  ENVIRONMENT_VARIABLES.md  README.md  agent_interface.py  azure.yaml  host_agent_server.py  local_authentication_options.py  m365agents.azure.yml  m365agents.local.yml  m365agents.playground.yml  m365agents.yml  pyproject.toml  start.py  test_obo.py  test_standalone.py  token_cache.py
.github/workflows/: deploy.yml
agents/: __init__.py  comedian.py  graph_user_profile.py  orchestrator.py
appPackage/: manifest.json
env/: .env.local.example
hooks/: postprovision.ps1  postprovision.sh  preprovision.ps1  preprovision.sh  setup-agent-identity.ps1
infra/: deploy.ps1  deploy.sh  main.bicep  main.parameters.json
infra/entra/: entra.bot.manifest.json
infra/modules/: azure-openai.bicep  bot-service.bicep  container-app-environment.bicep  container-app.bicep  container-registry.bicep  managed-identity-roles.bicep
